# DNN_based_detection

./: README.md
data/labels/: Caltech_WebFaces.txt
data/labels/FDDB-folds/: for_test_with_FDDB-02.txt
detector/: CMakeLists.txt
detector/CMakeScripts/: FindTorch.cmake
detector/include/: Classifier.hpp  FacesClassifier.hpp  caffe_classifier.hpp  classifier.hpp  classifier_factory.hpp  detector.hpp  fake_classifier.hpp  lua_classifier.hpp  torch_classifier.hpp
detector/samples/: CMakeLists.txt  caffe_detector.cpp  genNegative.cpp  gen_negsamples_lfw.cpp  gen_negsamples_voc.cpp  getNegatives.cpp  get_possamples_lfw.cpp  sample_face_detector.cpp  show_bboxes.cpp  testFacesDetector.cpp
detector/src/: Detector.cpp  FacesClassifier.cpp  caffe_classifier.cpp  classifier.cpp  classifier_factory.cpp  detector.cpp  torch_classifier.cpp
detector/test/: CMakeLists.txt  test_detector.cpp
results/ROC-curves/: Legend_ROC-curves_Haar_and_LBP.md  plot_ROC-curves.py
results/cascade_haar/: Haar_Pos-1k_Neg-2k_Stages-10_dep-4.xml  haar_Pos-1k_Neg-2k_Stages-10.xml  haar_Pos-1k_Neg-2k_Stages-10_AllFeatureHaar.xml  haar_Pos-1k_Neg-2k_Stages-10_mWC150.xml  haar_Pos-1k_Neg-2k_Stages-15.xml  haar_Pos-1k_Neg-2k_Stages-15_dep-4.xml  haar_Pos-2k_Neg-2k_Stages-10.xml
scripts/: eval_detector.py  lbp_fd.cpp  run-detector-on-fddb.sh
scripts/annotation_faces/: BioID.py  CIE_Biomatrics.py  Caltech.py  CheckPointRect.py  FEI.py  Genki.py  MUCT.py  annot_rect_error.cpp  colorFERET.py
scripts/parsers_annotation_faces/: BioID.py  CIE_Biomatrics.py  CMU_rect.py  Caltech.py  FEI.py  Genki.py  IMM.py  MUCT.py  colorFERET.py  extract_more_negative_images.py  extract_more_positive_images_use_annotation.py  replays.py
